# goIt-homework-alchemy

./: config.ini  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5bdeae9b162c_update_tables.py  67f01d6a2f85_init.py  c0223b8555eb_update_tables2.py
conf/: db.py
src/: models.py  seed.py
